data/derived/sp14/progs/unify/prog1815.ml.out
Characters 31-32:
  let _ = eval (Factorial(VarX), 5, 0 );;
                                 ^
Error: This expression has type int but an expression was expected of type
         float
